--- a/index.html
+++ b/index.html
@@ -242,3 +242,4 @@ console.log(getTextWidth("hello there!", "bold 12px arial"));
 
   typewriter.type();
 </script>
+<button onclick="window.location.href='https://coolkids997.github.io/Pong/'">Play Pong</button>
